--- a/templates/view.html
+++ b/templates/view.html
@@ -356,7 +356,7 @@
                 <h1 class="post-title">{{ post['title'] }}</h1>
                 <div class="post-meta">
                     <span>👤 작성자: {{ post['author'] }}</span>
-                    <span>📅 작성일: {{ post['created_at'][:16] }}</span>
+                    <span>📅 작성일: {{ post['created_at'].strftime('%Y-%m-%d %H:%M') if post['created_at'].__class__.__name__ == 'datetime' else post['created_at'][:16] }}</span>
                 </div>
             </div>
 
