--- a/templates/index.html
+++ b/templates/index.html
@@ -213,7 +213,7 @@
                         {% endif %}
                     </div>
                     <div class="project-meta">
-                        👤 {{ post['author'] }} | 📅 {{ post['created_at'][:16] }}
+                        👤 {{ post['author'] }} | 📅 {{ post['created_at'].strftime('%Y-%m-%d %H:%M') if post['created_at'].__class__.__name__ == 'datetime' else post['created_at'][:16] }}
                     </div>
                     <div class="project-content">{{ post['content']|striptags|truncate(100) }}</div>
                 </div>
