--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
         
         <div class="hero">
             <h1>🚀 NVIDIA 8th Board</h1>
-            <p>AI와 딥러닝을 사랑하는 사람들의 커뮤니티</p>
+            <p>AI 및 딥러닝 프로젝트를 공유하고 소통하는 공간입니다.</p>
         </div>
 
         <div class="board-grid">
